<resources>
    <string name="app_name">MireaProgectApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mirea project</string>
    <string name="nav_header_subtitle">Kartamysheva Taisia BSBO-05-19</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_calculator">Calculator</string>
    <string name="menu_webview">Webview</string>
    <string name="menu_music">Music player</string>
    <string name="menu_sensorsoverview">Sensors overview</string>
    <string name="menu_recorder">Recorder</string>
    <string name="menu_camera">Camera</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_stories">Stories</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>