<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_calculator" />
        <item
            android:id="@+id/nav_webview"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_webview" />
        <item
            android:id="@+id/nav_musicplayer"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_music" />
        <item
            android:id="@+id/nav_sensorsoverview"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_sensorsoverview" />
        <item
            android:id="@+id/nav_recorder"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_recorder" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_stories"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_stories" />
    </group>
</menu>